<resources>
    <string name="app_name">Reto AndroidDevs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_greetings_name">Hola Marco</string>
    <string name="label_greetings_">,buenos dias!</string>
    <string name="label_search_visit">Busca una visita</string>
    <string name="placeholder_status">{{status}}</string>
    <string name="placeholder_street_name">{{street name}}</string>
    <string name="placeholder_suburb">{{suburb}}</string>
    <string name="placeholder_visits_left">{{Visits left}}</string>
    <string name="label_navigate">Navegar</string>
    <string name="label_visit">Realizas visita</string>
    <string name="label_visited">Visitado</string>
    <string name="label_no_visited">Pendiente</string>
</resources>