<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/items_small_margin"
    android:layout_marginTop="@dimen/items_small_margin"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/margin_small"
            app:cardBackgroundColor="@color/text_light_gray"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginStart="@dimen/margin_regular"
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/placeholder_status"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_extra_light_gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_street_name"
            app:layout_constraintStart_toEndOf="@+id/cv_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginStart="@dimen/margin_regular"
            android:id="@+id/tv_street_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/placeholder_street_name"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/black_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginStart="@dimen/margin_regular"
            android:id="@+id/tv_suburb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/placeholder_suburb"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/text_extra_light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_street_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
