<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Fragments.MapsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_regular">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_detail"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="@dimen/margin_small"
                    app:cardBackgroundColor="@color/text_light_gray"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:text="@string/placeholder_status"
                    android:textColor="@color/text_extra_light_gray"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintBottom_toTopOf="@+id/tv_street_name"
                    app:layout_constraintStart_toEndOf="@+id/cv_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_street_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:text="@string/placeholder_street_name"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_suburb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:text="@string/placeholder_suburb"
                    android:textColor="@color/text_extra_light_gray"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_street_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_menuBtn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="159dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_navigate"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:strokeColor="@color/text_highlight"
                    app:strokeWidth="2dp"
                    app:backgroundTint="@android:color/transparent"
                    android:layout_marginStart="@dimen/margin_regular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_navigate"
                    android:textAllCaps="false"
                    android:textColor="@color/text_highlight"/>

                <com.google.android.material.button.MaterialButton
                    app:backgroundTint="@color/text_highlight"
                    android:id="@+id/btn_visit"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:strokeWidth="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_visit"
                    android:textAllCaps="false"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
