<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".Fragments.FirstFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/tv_grertings_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_big"
            android:text="@string/label_greetings_name"
            android:textColor="@color/black_text"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:layout_marginStart="4dp"
            android:id="@+id/tv_grertings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_grertings_name"
            android:text="@string/label_greetings_"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_normal"
            />

        <ImageView
            android:id="@+id/img_avatar"
            android:src="@drawable/avatar"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <ViewSwitcher
        android:id="@+id/view_switch"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:enabled="false"
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/label_search_visit"
                    android:paddingStart="@dimen/margin_small"
                    android:textSize="@dimen/text_size_small" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_visits_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_regular"
                android:text="@string/placeholder_visits_left"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_places"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_visits_left"
                tools:listitem="@layout/layout_item_place" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_no_places"
            android:id="@+id/vw_no_places"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            />


    </ViewSwitcher>

</androidx.constraintlayout.widget.ConstraintLayout>